--- a/CreateMonster/app/src/main/AndroidManifest.xml
+++ b/CreateMonster/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.creature.CreatureActivity"
+            android:parentActivityName=".view.allcreatures.AllCreaturesActivity" />
     </application>
 
 </manifest>
