--- a/CreateMonster/app/build.gradle
+++ b/CreateMonster/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$arch_comp_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
