--- a/CreateMonster/app/build.gradle
+++ b/CreateMonster/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$arch_comp_version"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.11.0"
+    testImplementation "android.arch.core:core-testing:$arch_comp_version"
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
